syntax = "proto3";

package ci.test.resources;
option java_package = "ru.yandex.ci.core.test.resources";
option java_multiple_files = true;

message Res0 {
    string s = 1;
}

message Res1 {
    string s = 1;
}

message Res2 {
    string s = 1;
}

message Res3 {
    string s = 1;
}

message Res4 {
    string s = 1;
}

message Res5 {
    string s = 1;
}

message IntegerResource {
    int32 value = 1;
}

message Resource451 {
    int32 value = 1;
}

message Flow451Result {
    int32 value = 1;
}

message ExpectedResources {
    Res1 res1 = 1;
    Res2 res2 = 2;
}

message StringResource {
    string string = 1;
}
